--- a/hybrideFrameworkProject/test-output/old/Suite/methods-alphabetical.html
+++ b/hybrideFrameworkProject/test-output/old/Suite/methods-alphabetical.html
@@ -1,50 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:44</td>   <td>0</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:com.runner.indexPageTest@1d0d6318]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="948bbd">  <td>22/05/18 13:16:51</td>   <td>-52992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@3f6db3fb]">basePageNavigation</td> 
-  <td>TestNG-test=login page test-1@1919421907</td>   <td></td> </tr>
-<tr bgcolor="f39bbd">  <td>22/05/18 13:17:02</td>   <td>-42048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@5c8504fd]">basePageNavigation</td> 
-  <td>TestNG-test=cart page test-1@860973095</td>   <td></td> </tr>
-<tr bgcolor="96b474">  <td>22/05/18 13:17:08</td>   <td>-36101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@3e14c16d]">basePageNavigation</td> 
-  <td>TestNG-test=search page test-1@1779347202</td>   <td></td> </tr>
-<tr bgcolor="76b9ea">  <td>22/05/18 13:17:15</td>   <td>-28827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@793138bd]">basePageNavigation</td> 
-  <td>TestNG-test=order page test-1@1243581998</td>   <td></td> </tr>
-<tr bgcolor="acb287">  <td>22/05/18 13:17:26</td>   <td>-17719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@4ba302e0]">basePageNavigation</td> 
-  <td>TestNG-test=about page test-1@796043727</td>   <td></td> </tr>
-<tr bgcolor="e4bb80">  <td>22/05/18 13:17:32</td>   <td>-11595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@18cebaa5]">basePageNavigation</td> 
-  <td>TestNG-test=whishlist page test-1@681462417</td>   <td></td> </tr>
-<tr bgcolor="f17eb4">  <td>22/05/18 13:17:39</td>   <td>-5128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@1d0d6318]">basePageNavigation</td> 
-  <td>TestNG-test=index page test-1@1333201408</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:16:51</td>   <td>-53228</td> <td title="&gt;&gt;Base.beforsuite()[pri:0, instance:com.runner.indexPageTest@1d0d6318]">&gt;&gt;beforsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:16:51</td>   <td>-53013</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@3f6db3fb]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=login page test-1@1919421907</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:02</td>   <td>-42058</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@5c8504fd]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=cart page test-1@860973095</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:08</td>   <td>-36111</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@3e14c16d]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=search page test-1@1779347202</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:15</td>   <td>-28850</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@793138bd]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=order page test-1@1243581998</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:26</td>   <td>-17729</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@4ba302e0]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=about page test-1@796043727</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:32</td>   <td>-11600</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@18cebaa5]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=whishlist page test-1@681462417</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/18 13:17:39</td>   <td>-5136</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@1d0d6318]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=index page test-1@1333201408</td>   <td></td> </tr>
-<tr bgcolor="948bbd">  <td>22/05/18 13:17:00</td>   <td>-44210</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@3f6db3fb]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="f39bbd">  <td>22/05/18 13:17:06</td>   <td>-38198</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@5c8504fd]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="96b474">  <td>22/05/18 13:17:13</td>   <td>-31037</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@3e14c16d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="76b9ea">  <td>22/05/18 13:17:26</td>   <td>-17975</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@793138bd]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="acb287">  <td>22/05/18 13:17:30</td>   <td>-13688</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@4ba302e0]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="e4bb80">  <td>22/05/18 13:17:37</td>   <td>-7279</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@18cebaa5]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
-<tr bgcolor="f17eb4">  <td>22/05/18 13:17:42</td>   <td>-2130</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@1d0d6318]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@94830685</td>   <td></td> </tr>
+<tr bgcolor="948bbd">  <td>22/05/19 21:02:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@52d239ba]">basePageNavigation</td> 
+  <td>TestNG-test=login test-1@72240090</td>   <td></td> </tr>
+<tr bgcolor="95ded0">  <td>22/05/19 21:02:42</td>   <td>90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@53dacd14]">basePageNavigation</td> 
+  <td>TestNG-test=cart test-1@1715756235</td>   <td></td> </tr>
+<tr bgcolor="8564fd">  <td>22/05/19 21:02:42</td>   <td>171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@4b7e96a]">basePageNavigation</td> 
+  <td>TestNG-test= search  pagetest-1@277919151</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>22/05/19 21:02:42</td>   <td>217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@3c989952]">basePageNavigation</td> 
+  <td>TestNG-test=order page test-1@848601073</td>   <td></td> </tr>
+<tr bgcolor="98776d">  <td>22/05/19 21:02:42</td>   <td>351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@1ae67cad]">basePageNavigation</td> 
+  <td>TestNG-test=about page test-1@1919736776</td>   <td></td> </tr>
+<tr bgcolor="9baac8">  <td>22/05/19 21:02:42</td>   <td>393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@765f05af]">basePageNavigation</td> 
+  <td>TestNG-test=wishlist page test-1@2117285008</td>   <td></td> </tr>
+<tr bgcolor="c28c93">  <td>22/05/19 21:02:42</td>   <td>443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@1522d8a0]">basePageNavigation</td> 
+  <td>TestNG-test=intex page test-1@1052724670</td>   <td></td> </tr>
+<tr bgcolor="9198bd">  <td>22/05/19 21:02:42</td>   <td>253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@5c18016b]">initialize</td> 
+  <td>TestNG-test=home page test-1@1616205385</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:41</td>   <td>-286</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@52d239ba]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=login test-1@72240090</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@53dacd14]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=cart test-1@1715756235</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>155</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@4b7e96a]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test= search  pagetest-1@277919151</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>208</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@3c989952]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=order page test-1@848601073</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>251</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@5c18016b]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=home page test-1@1616205385</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>347</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@1ae67cad]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=about page test-1@1919736776</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>385</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@765f05af]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=wishlist page test-1@2117285008</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>438</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@1522d8a0]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=intex page test-1@1052724670</td>   <td></td> </tr>
+<tr bgcolor="948bbd">  <td>22/05/19 21:02:42</td>   <td>34</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@52d239ba]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="95ded0">  <td>22/05/19 21:02:42</td>   <td>99</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@53dacd14]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="8564fd">  <td>22/05/19 21:02:42</td>   <td>178</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@4b7e96a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>22/05/19 21:02:42</td>   <td>223</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@3c989952]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="9198bd">  <td>22/05/19 21:02:42</td>   <td>263</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@5c18016b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="98776d">  <td>22/05/19 21:02:42</td>   <td>357</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@1ae67cad]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="9baac8">  <td>22/05/19 21:02:42</td>   <td>397</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@765f05af]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="c28c93">  <td>22/05/19 21:02:42</td>   <td>455</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@1522d8a0]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
 </table>
