--- a/hybrideFrameworkProject/test-output/old/Suite/toc.html
+++ b/hybrideFrameworkProject/test-output/old/Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>7 tests</td>
-<td><a target='mainFrame' href='classes.html'>7 classes</a></td>
-<td>7 methods:<br/>
+<td>8 tests</td>
+<td><a target='mainFrame' href='classes.html'>8 classes</a></td>
+<td>8 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,58 +20,66 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>about page test (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'> search  pagetest (0/1/0)</td><td valign='top' align='right'>
+  <a href=' search  pagetest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>about page test (0/1/0)</td><td valign='top' align='right'>
   <a href='about page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>cart page test (1/0/0)</td><td valign='top' align='right'>
-  <a href='cart page test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>cart test (0/1/0)</td><td valign='top' align='right'>
+  <a href='cart test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>index page test (1/0/0)</td><td valign='top' align='right'>
-  <a href='index page test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>home page test (0/1/0)</td><td valign='top' align='right'>
+  <a href='home page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>login page test (1/0/0)</td><td valign='top' align='right'>
-  <a href='login page test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>intex page test (0/1/0)</td><td valign='top' align='right'>
+  <a href='intex page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>order page test (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>login test (0/1/0)</td><td valign='top' align='right'>
+  <a href='login test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>order page test (0/1/0)</td><td valign='top' align='right'>
   <a href='order page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>search page test (1/0/0)</td><td valign='top' align='right'>
-  <a href='search page test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>whishlist page test (1/0/0)</td><td valign='top' align='right'>
-  <a href='whishlist page test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>wishlist page test (0/1/0)</td><td valign='top' align='right'>
+  <a href='wishlist page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
