--- a/hybrideFrameworkProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/hybrideFrameworkProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3b89c">  <td>22/05/19 21:06:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@68044f4]">basePageNavigation</td> 
-  <td>main@1756819670</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/19 21:06:51</td>   <td>-241</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@68044f4]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1756819670</td>   <td></td> </tr>
-<tr bgcolor="f3b89c">  <td>22/05/19 21:06:51</td>   <td>36</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@68044f4]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1756819670</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:05:30</td>   <td>0</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:com.runner.HomePage@7096b474]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="60f9cb">  <td>22/05/20 16:04:04</td>   <td>-85454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@43aaf813]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="69e366">  <td>22/05/20 16:04:18</td>   <td>-72096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.basePageNavigation()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="73c1fb">  <td>22/05/20 16:04:54</td>   <td>-35694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>22/05/20 16:04:59</td>   <td>-30362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/20 16:04:41</td>   <td>-48304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>22/05/20 16:04:00</td>   <td>-89678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="62fc7d">  <td>22/05/20 16:04:10</td>   <td>-79421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="88d8b8">  <td>22/05/20 16:04:30</td>   <td>-60140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpPageTest.basePageNavigation()[pri:0, instance:com.runner.HelpPageTest@e98770d]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="ceb1df">  <td>22/05/20 16:03:56</td>   <td>-94094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:51</td>   <td>-98470</td> <td title="&gt;&gt;Base.beforsuite()[pri:0, instance:com.runner.HomePage@7096b474]">&gt;&gt;beforsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="92be74">  <td>22/05/20 16:03:51</td>   <td>-98199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@7096b474]">initialize</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:00</td>   <td>-89684</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:59</td>   <td>-30366</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:41</td>   <td>-48314</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:54</td>   <td>-35700</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:56</td>   <td>-94098</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:51</td>   <td>-98219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@7096b474]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:10</td>   <td>-79427</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:04</td>   <td>-85460</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@43aaf813]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:18</td>   <td>-72107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:30</td>   <td>-60154</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HelpPageTest@e98770d]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="ceb1df">  <td>22/05/20 16:05:29</td>   <td>-301</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="92be74">  <td>22/05/20 16:05:30</td>   <td>-109</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@7096b474]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="62fc7d">  <td>22/05/20 16:05:30</td>   <td>-107</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="88d8b8">  <td>22/05/20 16:05:30</td>   <td>-114</td> <td>&nbsp;</td><td title="&lt;&lt;HelpPageTest.teardown()[pri:0, instance:com.runner.HelpPageTest@e98770d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="73c1fb">  <td>22/05/20 16:05:30</td>   <td>-118</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="60f9cb">  <td>22/05/20 16:05:30</td>   <td>-104</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@43aaf813]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>22/05/20 16:05:30</td>   <td>-108</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>22/05/20 16:05:30</td>   <td>-102</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="69e366">  <td>22/05/20 16:05:30</td>   <td>-106</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.teardown()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/20 16:05:30</td>   <td>-108</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
