--- a/hybrideFrameworkProject/test-output/old/Default suite/methods-not-run.html
+++ b/hybrideFrameworkProject/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,22 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.afterSuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
+<tr><td>com.resource.Base.beforsuite</td></tr>
 </table>
