--- a/hybrideFrameworkProject/test-output/old/Suite/toc.html
+++ b/hybrideFrameworkProject/test-output/old/Suite/toc.html
@@ -22,63 +22,63 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'> search  pagetest (0/1/0)</td><td valign='top' align='right'>
-  <a href=' search  pagetest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>about page test (0/1/0)</td><td valign='top' align='right'>
-  <a href='about page test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>cart test (0/1/0)</td><td valign='top' align='right'>
-  <a href='cart test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>home page test (0/1/0)</td><td valign='top' align='right'>
-  <a href='home page test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>intex page test (0/1/0)</td><td valign='top' align='right'>
-  <a href='intex page test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
 <table style='width: 100%'><tr><td valign='top'>login test (0/1/0)</td><td valign='top' align='right'>
   <a href='login test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>order page test (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'> search  pagetest (1/0/0)</td><td valign='top' align='right'>
+  <a href=' search  pagetest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>about page test (1/0/0)</td><td valign='top' align='right'>
+  <a href='about page test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>cart test (1/0/0)</td><td valign='top' align='right'>
+  <a href='cart test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>home page test (1/0/0)</td><td valign='top' align='right'>
+  <a href='home page test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>intex page test (1/0/0)</td><td valign='top' align='right'>
+  <a href='intex page test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>order page test (1/0/0)</td><td valign='top' align='right'>
   <a href='order page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>wishlist page test (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>wishlist page test (1/0/0)</td><td valign='top' align='right'>
   <a href='wishlist page test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
