--- a/hybrideFrameworkProject/test-output/old/Default suite/methods.html
+++ b/hybrideFrameworkProject/test-output/old/Default suite/methods.html
@@ -1,10 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3b89c">  <td>22/05/19 21:06:51</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@68044f4]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1756819670</td>   <td></td> </tr>
-<tr bgcolor="f3b89c">  <td>22/05/19 21:06:51</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@68044f4]">basePageNavigation</td> 
-  <td>main@1756819670</td>   <td></td> </tr>
-<tr bgcolor="6c8f8d">  <td>22/05/19 21:06:51</td>   <td>-277</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@68044f4]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1756819670</td>   <td></td> </tr>
+<tr bgcolor="ceb1df">  <td>22/05/20 16:05:29</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:00</td>   <td>-89383</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:59</td>   <td>-30065</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:05:30</td>   <td>301</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:com.runner.HomePage@7096b474]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="92be74">  <td>22/05/20 16:05:30</td>   <td>192</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@7096b474]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="60f9cb">  <td>22/05/20 16:04:04</td>   <td>-85153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@43aaf813]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="62fc7d">  <td>22/05/20 16:05:30</td>   <td>194</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:41</td>   <td>-48013</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="69e366">  <td>22/05/20 16:04:18</td>   <td>-71795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.basePageNavigation()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="88d8b8">  <td>22/05/20 16:05:30</td>   <td>187</td> <td>&nbsp;</td><td title="&lt;&lt;HelpPageTest.teardown()[pri:0, instance:com.runner.HelpPageTest@e98770d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:54</td>   <td>-35399</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="73c1fb">  <td>22/05/20 16:05:30</td>   <td>183</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:56</td>   <td>-93797</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="73c1fb">  <td>22/05/20 16:04:54</td>   <td>-35393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@18cebaa5]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="60f9cb">  <td>22/05/20 16:05:30</td>   <td>197</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@43aaf813]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>22/05/20 16:04:59</td>   <td>-30061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="ccb269">  <td>22/05/20 16:05:30</td>   <td>193</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@463b4ac8]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="92be74">  <td>22/05/20 16:03:51</td>   <td>-97898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@7096b474]">initialize</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/20 16:04:41</td>   <td>-48003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:51</td>   <td>-97918</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@7096b474]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>22/05/20 16:04:00</td>   <td>-89377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:03:51</td>   <td>-98169</td> <td title="&gt;&gt;Base.beforsuite()[pri:0, instance:com.runner.HomePage@7096b474]">&gt;&gt;beforsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>22/05/20 16:05:30</td>   <td>199</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@33aeca0b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="62fc7d">  <td>22/05/20 16:04:10</td>   <td>-79120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="69e366">  <td>22/05/20 16:05:30</td>   <td>195</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.teardown()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:10</td>   <td>-79126</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@57ac5227]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="88d8b8">  <td>22/05/20 16:04:30</td>   <td>-59839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpPageTest.basePageNavigation()[pri:0, instance:com.runner.HelpPageTest@e98770d]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/05/20 16:05:30</td>   <td>193</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@31e4bb20]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:04</td>   <td>-85159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@43aaf813]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:18</td>   <td>-71806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SignUpPageTest@4ba302e0]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 16:04:30</td>   <td>-59853</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HelpPageTest@e98770d]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1552870927</td>   <td></td> </tr>
+<tr bgcolor="ceb1df">  <td>22/05/20 16:03:56</td>   <td>-93793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@5c18016b]">basePageNavigation</td> 
+  <td>main@1552870927</td>   <td></td> </tr>
 </table>
