--- a/hybrideFrameworkProject/test-output/old/Suite/methods-alphabetical.html
+++ b/hybrideFrameworkProject/test-output/old/Suite/methods-alphabetical.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="948bbd">  <td>22/05/19 21:02:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@52d239ba]">basePageNavigation</td> 
+<tr bgcolor="f3b89c">  <td>22/05/20 14:47:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.basePageNavigation()[pri:0, instance:com.runner.LoginPageTest@68044f4]">basePageNavigation</td> 
   <td>TestNG-test=login test-1@72240090</td>   <td></td> </tr>
-<tr bgcolor="95ded0">  <td>22/05/19 21:02:42</td>   <td>90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@53dacd14]">basePageNavigation</td> 
-  <td>TestNG-test=cart test-1@1715756235</td>   <td></td> </tr>
-<tr bgcolor="8564fd">  <td>22/05/19 21:02:42</td>   <td>171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@4b7e96a]">basePageNavigation</td> 
-  <td>TestNG-test= search  pagetest-1@277919151</td>   <td></td> </tr>
-<tr bgcolor="74c16d">  <td>22/05/19 21:02:42</td>   <td>217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@3c989952]">basePageNavigation</td> 
-  <td>TestNG-test=order page test-1@848601073</td>   <td></td> </tr>
-<tr bgcolor="98776d">  <td>22/05/19 21:02:42</td>   <td>351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@1ae67cad]">basePageNavigation</td> 
-  <td>TestNG-test=about page test-1@1919736776</td>   <td></td> </tr>
-<tr bgcolor="9baac8">  <td>22/05/19 21:02:42</td>   <td>393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@765f05af]">basePageNavigation</td> 
-  <td>TestNG-test=wishlist page test-1@2117285008</td>   <td></td> </tr>
-<tr bgcolor="c28c93">  <td>22/05/19 21:02:42</td>   <td>443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@1522d8a0]">basePageNavigation</td> 
-  <td>TestNG-test=intex page test-1@1052724670</td>   <td></td> </tr>
-<tr bgcolor="9198bd">  <td>22/05/19 21:02:42</td>   <td>253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@5c18016b]">initialize</td> 
-  <td>TestNG-test=home page test-1@1616205385</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:41</td>   <td>-286</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@52d239ba]">&gt;&gt;startTest</td> 
+<tr bgcolor="817494">  <td>22/05/20 14:48:03</td>   <td>16271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.basePageNavigation()[pri:0, instance:com.runner.CartcheckTest@4795ded0]">basePageNavigation</td> 
+  <td>TestNG-test=cart test-1@706075658</td>   <td></td> </tr>
+<tr bgcolor="f39bbd">  <td>22/05/20 14:48:07</td>   <td>20795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.basePageNavigation()[pri:0, instance:com.runner.SearchPageTest@5c8504fd]">basePageNavigation</td> 
+  <td>TestNG-test= search  pagetest-1@1616861614</td>   <td></td> </tr>
+<tr bgcolor="96b474">  <td>22/05/20 14:48:13</td>   <td>25976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.basePageNavigation()[pri:0, instance:com.runner.OrderPageTest@3e14c16d]">basePageNavigation</td> 
+  <td>TestNG-test=order page test-1@1293807997</td>   <td></td> </tr>
+<tr bgcolor="a362e0">  <td>22/05/20 14:48:34</td>   <td>47727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.basePageNavigation()[pri:0, instance:com.runner.AboutPageTest@e98770d]">basePageNavigation</td> 
+  <td>TestNG-test=about page test-1@492357873</td>   <td></td> </tr>
+<tr bgcolor="cebaa5">  <td>22/05/20 14:48:39</td>   <td>52126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.basePageNavigation()[pri:0, instance:com.runner.WishlistTest@463b4ac8]">basePageNavigation</td> 
+  <td>TestNG-test=wishlist page test-1@1810264152</td>   <td></td> </tr>
+<tr bgcolor="6d6378">  <td>22/05/20 14:48:43</td>   <td>56022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.basePageNavigation()[pri:0, instance:com.runner.indexPageTest@bff34c6]">basePageNavigation</td> 
+  <td>TestNG-test=intex page test-1@992184156</td>   <td></td> </tr>
+<tr bgcolor="76b9ea">  <td>22/05/20 14:48:26</td>   <td>39664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.initialize()[pri:0, instance:com.runner.HomePage@1951b871]">initialize</td> 
+  <td>TestNG-test=home page test-1@62270255</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:47:46</td>   <td>-234</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.LoginPageTest@68044f4]">&gt;&gt;startTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=login test-1@72240090</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@53dacd14]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=cart test-1@1715756235</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>155</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@4b7e96a]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test= search  pagetest-1@277919151</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>208</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@3c989952]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=order page test-1@848601073</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>251</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@5c18016b]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=home page test-1@1616205385</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>347</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@1ae67cad]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=about page test-1@1919736776</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>385</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@765f05af]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=wishlist page test-1@2117285008</td>   <td></td> </tr>
-<tr bgcolor="bb7c74">  <td>22/05/19 21:02:42</td>   <td>438</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@1522d8a0]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=intex page test-1@1052724670</td>   <td></td> </tr>
-<tr bgcolor="948bbd">  <td>22/05/19 21:02:42</td>   <td>34</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@52d239ba]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="95ded0">  <td>22/05/19 21:02:42</td>   <td>99</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@53dacd14]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="8564fd">  <td>22/05/19 21:02:42</td>   <td>178</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@4b7e96a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="74c16d">  <td>22/05/19 21:02:42</td>   <td>223</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@3c989952]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="9198bd">  <td>22/05/19 21:02:42</td>   <td>263</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@5c18016b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="98776d">  <td>22/05/19 21:02:42</td>   <td>357</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@1ae67cad]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="9baac8">  <td>22/05/19 21:02:42</td>   <td>397</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@765f05af]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="c28c93">  <td>22/05/19 21:02:42</td>   <td>455</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@1522d8a0]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:03</td>   <td>16267</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.CartcheckTest@4795ded0]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=cart test-1@706075658</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:07</td>   <td>20780</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.SearchPageTest@5c8504fd]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test= search  pagetest-1@1616861614</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:13</td>   <td>25964</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.OrderPageTest@3e14c16d]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=order page test-1@1293807997</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:26</td>   <td>39636</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.HomePage@1951b871]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=home page test-1@62270255</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:34</td>   <td>47718</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.AboutPageTest@e98770d]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=about page test-1@492357873</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:39</td>   <td>52114</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.WishlistTest@463b4ac8]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=wishlist page test-1@1810264152</td>   <td></td> </tr>
+<tr bgcolor="6c8f8d">  <td>22/05/20 14:48:43</td>   <td>56017</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startTest()[pri:0, instance:com.runner.indexPageTest@bff34c6]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=intex page test-1@992184156</td>   <td></td> </tr>
+<tr bgcolor="f3b89c">  <td>22/05/20 14:48:03</td>   <td>15917</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@68044f4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="817494">  <td>22/05/20 14:48:07</td>   <td>20602</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@4795ded0]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="f39bbd">  <td>22/05/20 14:48:12</td>   <td>25650</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@5c8504fd]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="96b474">  <td>22/05/20 14:48:24</td>   <td>37282</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@3e14c16d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="76b9ea">  <td>22/05/20 14:48:30</td>   <td>43493</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@1951b871]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="a362e0">  <td>22/05/20 14:48:38</td>   <td>51859</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardown()[pri:0, instance:com.runner.AboutPageTest@e98770d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="cebaa5">  <td>22/05/20 14:48:42</td>   <td>55826</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@463b4ac8]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
+<tr bgcolor="6d6378">  <td>22/05/20 14:48:46</td>   <td>58994</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@bff34c6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489193907</td>   <td></td> </tr>
 </table>
